--- a/kafkafetch.ipynb
+++ b/kafkafetch.ipynb
@@ -50,7 +50,7 @@
     "producer = KafkaProducer(bootstrap_servers='localhost:9092')\n",
     "\n",
     "# OpenWeather API key\n",
-    "openweather_api_key = '56718e7590a2f67ca64cfb140da39658'\n",
+    "openweather_api_key = '*********'\n",
     "\n",
     "# Columns to extract for CSV file\n",
     "csv_columns = ['city', 'timestamp', 'temperature', 'humidity', 'weather_description', 'wind_speed', 'cloudiness']\n",
